# cv.jit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.md  License.md  ReadMe.md  package-info.json  package-info.json.in
cvjit/: README - What's new.rtf  readme.rtf
cvjit/abstractions/: cv.jit.blobs.bounds.draw.mxb  cv.jit.blobs.centroids.draw.mxb  cv.jit.blobs.color.maxpat  cv.jit.blobs.color.mxb  cv.jit.blobs.colour.maxpat  cv.jit.blobs.colour.mxb  cv.jit.blobs.direction.draw.maxpat  cv.jit.blobs.direction.draw.mxb  cv.jit.blobs.elongation.draw.maxpat  cv.jit.blobs.elongation.draw.mxb  cv.jit.blobs.orient.draw.maxpat  cv.jit.blobs.orient.draw.mxb  cv.jit.blobs.orientation.draw.maxpat  cv.jit.cartopol.maxpat  cv.jit.cartopol.mxb  cv.jit.centroids.draw.maxpat  cv.jit.centroids.draw.mxb  cv.jit.circles.draw.mxb  cv.jit.circularity.maxpat  cv.jit.circularity.mxb  cv.jit.close.maxpat  cv.jit.close.mxb  cv.jit.direction.maxpat  cv.jit.direction.mxb  cv.jit.elongation.maxpat  cv.jit.elongation.mxb  cv.jit.faces.draw.maxpat  cv.jit.faces.draw.mxb  cv.jit.features.draw.maxpat  cv.jit.features.draw.mxb  cv.jit.features2track.maxpat  cv.jit.features2track.mxb  cv.jit.flow.draw.maxpat  cv.jit.framesub.maxpat  cv.jit.framesub.mxb  cv.jit.hough2lines.mxb  cv.jit.lines.draw.mxb  cv.jit.open.maxpat  cv.jit.open.mxb  cv.jit.orientation.maxpat  (+19 more)
cvjit/c74support/: README.txt
cvjit/data/: The_letter_A.mxb  The_letter_M.mxb
cvjit/help/: cv.jit.blobs.bounds.maxhelp  cv.jit.blobs.direction.maxhelp  cv.jit.blobs.moments.maxhelp  cv.jit.blobs.orientation.maxhelp  cv.jit.blobs.recon.maxhelp  cv.jit.blobs.sort.maxhelp  cv.jit.canny.maxhelp  cv.jit.cartopol.maxhelp  cv.jit.centroids.maxhelp  cv.jit.circularity.maxhelp  cv.jit.dilate.maxhelp  cv.jit.direction.maxhelp  cv.jit.elongation.maxhelp  cv.jit.erode.maxhelp  cv.jit.extrema.maxhelp  cv.jit.faces.maxhelp  cv.jit.features.maxhelp  cv.jit.features2track.maxhelp  cv.jit.framesub.maxhelp  cv.jit.hough2lines.maxhelp  cv.jit.hsflow.maxhelp  cv.jit.label.maxhelp  cv.jit.lines.maxhelp  cv.jit.lkflow.maxhelp  cv.jit.mass.maxhelp  cv.jit.mean.maxhelp  cv.jit.moments.maxhelp  cv.jit.opticalflow.maxhelp  cv.jit.orientation.maxhelp  cv.jit.perimeter.maxhelp  cv.jit.poltocar.maxhelp  cv.jit.ravg.maxhelp  cv.jit.resize.maxhelp  cv.jit.shift.maxhelp  cv.jit.stddev.maxhelp  cv.jit.template.maxpat  cv.jit.threshold.maxhelp  cv.jit.track.maxhelp  cv.jit.undergrad.maxhelp  cv.jit.variance.maxhelp  (+1 more)
cvjit/include/: cvjit.h  cvjitVectorOps.h  jitOpenCV.h
cvjit/lib/: cv.lib  cxcore.lib  opencv_lapack.lib  zlib.lib
cvjit/license/: license.rtf
cvjit/patches/: cv.jit-Object Guide.maxpat  cv.jit-Object Guide.mxb
extras/: cv.jit-Object Guide.maxpat
help/: copyright-jmp.maxpat  cv.jit.binedge.maxhelp  cv.jit.blobs.bounds.maxhelp  cv.jit.blobs.centroids.maxhelp  cv.jit.blobs.direction.maxhelp  cv.jit.blobs.elongation.maxhelp  cv.jit.blobs.moments.maxhelp  cv.jit.blobs.orientation.maxhelp  cv.jit.blobs.recon.maxhelp  cv.jit.blobs.sort.maxhelp  cv.jit.blur.maxhelp  cv.jit.calibration.maxhelp  cv.jit.canny.maxhelp  cv.jit.cartopol.maxhelp  cv.jit.centroids.maxhelp  cv.jit.changetype.maxhelp  cv.jit.circularity.maxhelp  cv.jit.close.maxhelp  cv.jit.contours.maxhelp  cv.jit.covariance.maxhelp  cv.jit.dilate.maxhelp  cv.jit.direction.maxhelp  cv.jit.elongation.maxhelp  cv.jit.erode.maxhelp  cv.jit.extrema.maxhelp  cv.jit.face.landmarks.maxhelp  cv.jit.face.parts.maxhelp  cv.jit.face.rigidpoints.maxhelp  cv.jit.faces.maxhelp  cv.jit.features.maxhelp  cv.jit.features2track.maxhelp  cv.jit.findchessboardcorners.maxhelp  cv.jit.findcontours.maxhelp  cv.jit.findhomography.maxhelp  cv.jit.floodfill.maxhelp  cv.jit.framesub.maxhelp  cv.jit.getperspective.maxhelp  cv.jit.hough.maxhelp  cv.jit.hough2lines.maxhelp  cv.jit.hsflow.maxhelp  (+33 more)
init/: cv.jit-objectmappings.txt
launcherutil/: cv.jit-Object Guide-old.maxpat  cv_jit_object_data.csv  cvlaunchgen.js  launcher-gen.maxpat
misc/: average_face.mtl  average_face_landmarks.txt  average_face_landmarks3d_lbf.jxf  average_face_landmarks_3d.txt  copyright-jmp.maxpat  face.landmarks.map.json  head.mtl  lbfmodel.yaml.map
patchers/: cv.jit.blobs.bounds.draw.maxpat  cv.jit.blobs.centroids.draw.maxpat  cv.jit.blobs.color.maxpat  cv.jit.blobs.colour.maxpat  cv.jit.blobs.direction.draw.maxpat  cv.jit.blobs.elongation.draw.maxpat  cv.jit.blobs.orient.draw.maxpat  cv.jit.blobs.orientation.draw.maxpat  cv.jit.cartopol.maxpat  cv.jit.centroids.draw.maxpat  cv.jit.changetype.maxpat  cv.jit.circles.draw.maxpat  cv.jit.circularity.maxpat  cv.jit.close.maxpat  cv.jit.direction.maxpat  cv.jit.elongation.maxpat  cv.jit.face.landmarks.draw.maxpat  cv.jit.face.parts.maxpat  cv.jit.face.rigidpoints.maxpat  cv.jit.faces.draw.maxpat  cv.jit.features.draw.maxpat  cv.jit.features2track.maxpat  cv.jit.flow.draw.maxpat  cv.jit.framesub.maxpat  cv.jit.grab.maxpat  cv.jit.hough2lines.maxpat  cv.jit.iter.maxpat  cv.jit.keypoints.draw.maxpat  cv.jit.lines.draw.maxpat  cv.jit.lowpass.maxpat  cv.jit.module.presence.maxpat  cv.jit.notempty.maxpat  cv.jit.open.maxpat  cv.jit.orientation.maxpat  cv.jit.perimeter.maxpat  cv.jit.poltocar.maxpat  cv.jit.shift.draw.maxpat  cv.jit.snake.draw.maxpat  cv.jit.stddev.maxpat  cv.jit.touches.draw.maxpat  (+4 more)
patchers/utils/: cv.input.chooser.maxpat
source/OpenCVsupport/: README.txt  jitcxerror.cpp
source/docs/: billiard.blend  dev_status.xlsx
source/include/: cvjit.h  cvjitVectorOps.h  cvjit_keypoints.h  cvjit_max.h  ext_sysfile.h  jitOpenCV.h
source/lib/: zlib.lib
source/projects/: cvjit-posttarget.cmake  cvjit-pretarget.cmake
source/projects/cv.jit.erode/: CMakeLists.txt  cv.erode.h  cv.jit.erode.cpp  max.cv.jit.erode.cpp
source/projects/cv.jit.erode/OSX/: cv.erode.cpp
source/projects/cv.jit.erode/Windows/: cv.jit.erode.cpp
source/projects/cv.jit.findhomography/: CMakeLists.txt  cv.jit.findhomography.cpp  max.cv.jit.findhomography.cpp
source/projects/cv.jit.learn/: CMakeLists.txt  cv.jit.learn.cpp
source/projects/cv.jit.pose/: CMakeLists.txt  cv.jit.pose.cpp  max.cv.jit.pose.cpp
(+665 files in other folders)
